UPD projects & Add test files and validation files

--- a/app.json
+++ b/app.json
@@ -5,6 +5,11 @@
       "bundler": "metro"
     },
     "name": "clint_side",
-    "slug": "clint_side"
+    "slug": "clint_side",
+    "ios": {
+      "config": {
+        "usesNonExemptEncryption": false
+      }
+    }
   }
 }
