--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "^48.0.7",
@@ -11,7 +12,6 @@
     "expo-linking": "~4.0.1",
     "expo-network": "^5.2.1",
     "expo-router": "^1.2.0",
-    "expo-secure-store": "^12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.20.0",
@@ -29,7 +29,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "jest": "^29.5.0"
   },
   "resolutions": {
     "metro": "^0.73.7",
