--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "metro": "^0.73.7",
     "metro-resolver": "^0.73.7"
   },
-  "name": "clint_side",
+  "name": "ar-funiture",
   "version": "1.0.0",
   "private": true
 }
