--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
+    "expo-image-picker": "^14.1.1",
     "expo-linking": "~4.0.1",
     "expo-network": "^5.2.1",
     "expo-router": "^1.2.0",
